# DollyChat

./: .gitignore  README.md  project.toml  pyproject.toml  setup.cfg  setup.py
DollyChat/: dolly_chat.py
DollyChat/controller/: controller.py
DollyChat/model/: model.py
DollyChat/model/generator/: generator.py  prompt_templates.py
DollyChat/model/llms/: __init__.py  fake_dolly.py  local_dolly.py  remote_llama.py
DollyChat/view/: view.py
DollyChat/view/screens/: __init__.py  chat_screen.py  help_screen.py  selection_screen.py
requirements/: base.txt
tests/test_app/: test_controller.py  test_model.py
